# cancer_ea

./: .gitignore  README.md  cancer_gp.py  collection_helpers.py  command_line.py  deap_cancer_ga_01.py  deap_cancer_ga_02.py  deap_one_max_bin_01.py  dollo_deap_cancer_01.py  dollo_node.py  dollo_node_crossover_operators.py  dollo_node_evaluation_likelihood.py  dollo_node_evaluation_operators.py  dollo_node_helpers.py  dollo_node_initialization_operators.py  dollo_node_mutation_operators.py  dollo_node_operators.py  ea_deap_cancer_01.py  ea_deap_cancer_03.py  ea_node.py  ea_node_ilustration_01.py  ea_node_ilustration_02.py  ea_node_ilustration_03_is_equeal.py  ea_node_ilustration_04.py  ea_node_ilustration_05.py  ea_node_ilustration_06_compact_vertical.py  ea_node_operators.py  example_01.in  example_02.in  example_02.in_fitness_(5.002955722302083,).txt  example_03.in  example_04.in  ga_node.py  ga_node_ilustration_01.py  ga_node_ilustration_02.py  ga_node_operators.py  generate_formats_gp.py  likelihood.py  likelihood_ilustration_01.py  main.py  (+6 more)
prog/src/: README.md  calculate_likelihood.py  generate_formats_gp.py  main_gp_full_dolo.py  main_gp_full_inferred.py  main_gp_part_01.py  main_gp_part_02.py  main_gp_part_03.py  pyproject.toml  read_element.py  read_input.py  requirements.txt  support_operators_output.py
prog/src/dollo_node/: dollo_node.py
prog/src/ea_node/: ea_node.py  ea_node_operators.py  main_compact_horizontal.py  main_compact_vertical.py  main_is_equal.py  main_random_init.py  main_rearange.py  main_rearange_by_label.py
prog/src/likelihood/: main.py  (+2 more)
(+79 files in other folders)
