[tool.poetry]
name = "dollo-gp-vns"
version = "0.1.0"
description = "dollo"
authors = ["Vladimir Filipovic <vladofilipovic@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
path = "16.6.0"
numpy = "1.26.0"
deap = "1.3.3"
six = "1.16.0"
anytree = "2.8.0"
bitstring = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
